--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+TestGitConsoleApplication\App.config merge=ours
+
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
